Created the initial shell and design also worked more on contact page

--- a/workshops.html
+++ b/workshops.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Workshops and Trainings</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
-            <a href="workshops.html">Workshops and Trainings</a>
+            <a href="workshops.html" class="active">Workshops and Trainings</a>
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
     <main class="page-layout">
         <div class="page-image">
-            <img src="images/home.jpg" alt="Home Image">
+            <img src="images/workshops.jpg" alt="Workshops Image">
         </div>
         <div class="page-content">
-            <h1>Welcome</h1>
-            <p>Welcome to Global Interpreting Innovations. We provide high-quality interpretation services in multiple languages.</p>
+            <h1>Workshops and Trainings</h1>
+            <p>We offer workshops to enhance interpreting skills and knowledge.</p>
         </div>
     </main>
 
