--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="active">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="index.html">Home</a>
+            <a href="about.html" class="active">About Us</a>
             <a href="workshops.html">Workshops and Trainings</a>
             <a href="contact.html">Contact Us</a>
         </nav>
@@ -18,11 +18,11 @@
 
     <main class="page-layout">
         <div class="page-image">
-            <img src="images/home.jpg" alt="Home Image">
+            <img src="images/about.jpg" alt="About Us Image">
         </div>
         <div class="page-content">
-            <h1>Welcome</h1>
-            <p>Welcome to Global Interpreting Innovations. We provide high-quality interpretation services in multiple languages.</p>
+            <h1>About Us</h1>
+            <p>At Global Interpreting Innovations, we are committed to bridging language gaps worldwide.</p>
         </div>
     </main>
 
