added content in all pages, new logo, made mobile friendly

--- a/about.html
+++ b/about.html
@@ -8,21 +8,61 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About Us</a>
-            <a href="workshops.html">Workshops and Trainings</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
-    </header>
-
-    <main class="page-layout">
-        <div class="page-image">
-            <img src="images/about.jpg" alt="About Us Image">
+        <div class="nav-container">
+            <nav class="nav-links">
+                <a href="index.html" >Home</a>
+                <a href="about.html"class="active">About Us</a>
+                <a href="workshops.html">Workshops and Trainings</a>
+                <a href="contact.html">Contact Us</a>
+            </nav>
+            <div class="logo-container">
+                <img src="images/Giilogo2.png" alt="Global Interpreting Innovations Logo">
+            </div>
         </div>
-        <div class="page-content">
+    </header>
+    
+
+    <main class="about-page">
+        <div class="about-container">
             <h1>About Us</h1>
-            <p>At Global Interpreting Innovations, we are committed to bridging language gaps worldwide.</p>
+            <p>Welcome to Global Interpreting Innovations (GII), a leader in interpreter education and professional development. At GII, we are committed to empowering interpreters with the skills, knowledge, and tools they need to excel in the fields of community, medical, educational, and social services interpreting. Our mission is to set a standard of excellence in interpreting by providing comprehensive and interactive training programs tailored to the diverse needs of our global community.</p>
+
+            <h2>Our Flagship Program: The Community Interpreter® Training</h2>
+            <p>Global Interpreting Innovations proudly offers <strong>The Community Interpreter® International</strong>, the nation’s most trusted 40-hour certificate training program for interpreters. This comprehensive program provides the foundational knowledge and practical skills required for professional success, including:</p>
+            <ul>
+                <li><strong>Medical Interpreting:</strong> Equip yourself to navigate the healthcare environment with precision and professionalism.</li>
+                <li><strong>Educational Interpreting:</strong> Learn how to facilitate communication in school settings to support students and families.</li>
+                <li><strong>Social Services Interpreting:</strong> Gain expertise in interpreting for government and nonprofit services.</li>
+            </ul>
+            <p>Our training is designed to be <strong>interactive, engaging, and skills-based</strong>, ensuring a dynamic learning experience. From mastering interpreting protocols to understanding professional ethics, this program offers the most up-to-date and practical insights into the profession.</p>
+
+            <h2>What Sets Us Apart</h2>
+            <ul>
+                <li><strong>Expert-Led Training:</strong> Our sessions are led by certified trainers who bring years of experience and real-world insights to the classroom.</li>
+                <li><strong>Comprehensive Curriculum:</strong> Delivered through detailed modules that cover ethics, protocols, decision-making, and role management.</li>
+                <li><strong>Interactive Learning:</strong> Hands-on activities, role plays, and practical exercises keep the sessions engaging and effective.</li>
+                <li><strong>Flexible Certification:</strong> Our program meets the prerequisite for national medical interpreting certification and provides certificates for varying levels of proficiency based on attendance, exam scores, and language skills.</li>
+            </ul>
+
+            <h2>Your Path to Excellence</h2>
+            <p>At GII, we understand that interpreters play a vital role in bridging language and cultural gaps. That’s why our training goes beyond theoretical knowledge to emphasize practical decision-making and real-world problem-solving. We use <strong>The Community Interpreter® International Textbook and Workbook</strong>, widely regarded as the most comprehensive resources in the field. These materials, developed by leading experts, include:</p>
+            <ul>
+                <li>An encyclopedia of interpreter knowledge.</li>
+                <li>Practical role plays and memory exercises.</li>
+                <li>Tools for professional development and self-care.</li>
+            </ul>
+
+            <h2>Why Choose Global Interpreting Innovations?</h2>
+            <ul>
+                <li><strong>Proven Results:</strong> Our trainees leave with a deeper understanding of the interpreting profession, ready to make meaningful contributions in their roles.</li>
+                <li><strong>Professional Recognition:</strong> Graduates of our program receive certifications that enhance their credibility and career opportunities.</li>
+                <li><strong>Accessible Learning:</strong> With online and live training options, we make it convenient for participants from all backgrounds to access top-tier education.</li>
+                <li><strong>Support Beyond Training:</strong> We provide ongoing support and resources to help our interpreters grow and thrive in their careers.</li>
+            </ul>
+            <p>At Global Interpreting Innovations, we are passionate about transforming lives through language access. Whether you are just starting your interpreting journey or seeking advanced professional development, we invite you to join us in setting new standards of excellence in the field.</p>
+
+            <h2>Get Started Today</h2>
+            <p>Begin your path to professional interpreting success with Global Interpreting Innovations. Explore our upcoming training sessions, register for a course, or contact us for more information. Together, we can make a difference—one interpretation at a time.</p>
         </div>
     </main>
 
