--- a/workshops.html
+++ b/workshops.html
@@ -8,21 +8,98 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="workshops.html" class="active">Workshops and Trainings</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
+        <div class="nav-container">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="workshops.html" class="active">Workshops and Trainings</a>
+                <a href="contact.html">Contact Us</a>
+            </nav>
+            <div class="logo-container">
+                <img src="images/Giilogo2.png" alt="Global Interpreting Innovations Logo">
+            </div>
+        </div>
     </header>
 
-    <main class="page-layout">
-        <div class="page-image">
-            <img src="images/workshops.jpg" alt="Workshops Image">
-        </div>
-        <div class="page-content">
+    <main class="workshops-page">
+        <div class="workshops-container">
             <h1>Workshops and Trainings</h1>
-            <p>We offer workshops to enhance interpreting skills and knowledge.</p>
+
+            <h2>40-Hour Community Interpreter® International</h2>
+            <p>Global Interpreting Innovations offers the <strong>40-Hour Community Interpreter® International</strong>, a nationally recognized training program designed to meet the needs of interpreters in medical, educational, and social service settings. This comprehensive course provides:</p>
+            <ul>
+                <li>The foundational knowledge required for professional interpreting.</li>
+                <li>A prerequisite for national medical interpreting certification.</li>
+                <li>A flexible and interactive online learning experience.</li>
+            </ul>
+            <p>This program is ideal for those seeking to start or advance their careers as interpreters, providing the skills and credentials needed to work with state agencies, hospitals, schools, and nonprofit organizations.</p>
+
+            <h2>Program Highlights</h2>
+            <ul>
+                <li><strong>Comprehensive Training:</strong> The course consists of five interactive sessions delivered entirely online via Zoom. Each session includes live lectures, group role plays, independent studies, videos, and engaging activities.</li>
+                <li><strong>Flexibility:</strong> With a mix of online and offline work, participants can manage their schedules while meeting the 40-hour training requirement. A minimum of 36 hours must be completed to earn certification.</li>
+                <li><strong>Interactive Learning:</strong> Hands-on exercises, real-world scenarios, and peer collaboration make this program highly engaging and effective.</li>
+                <li><strong>Certification:</strong> Upon successful completion, participants receive a certificate that satisfies training requirements for hospitals and state agencies across all 50 states.</li>
+            </ul>
+
+            <h2>Program Content</h2>
+            <ul>
+                <li><strong>Module 1: The Profession</strong>
+                    <ul>
+                        <li>Overview of community and medical interpreting</li>
+                        <li>Ethics and performance assessment</li>
+                    </ul>
+                </li>
+                <li><strong>Module 2: Protocols and Skills</strong>
+                    <ul>
+                        <li>Interpreting modes, memory skills, and note-taking</li>
+                        <li>Basic protocols like positioning and message transfer skills</li>
+                    </ul>
+                </li>
+                <li><strong>Module 3: Strategic Mediation</strong>
+                    <ul>
+                        <li>Cultural mediation and intervention skills</li>
+                        <li>Decision-making tools using the Strategic Mediation Model</li>
+                    </ul>
+                </li>
+                <li><strong>Module 4: Professional Identity</strong>
+                    <ul>
+                        <li>Role management and professional practice</li>
+                        <li>Terminology and legal interpreting basics</li>
+                    </ul>
+                </li>
+                <li><strong>Module 5: The Interpreter’s Role</strong>
+                    <ul>
+                        <li>Advocacy and national standards of practice</li>
+                        <li>Self-care and ongoing professional development</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <h2>Registration and Fees</h2>
+            <ul>
+                <li><strong>Cost:</strong> $500 (payment plans available)</li>
+                <li><strong>Schedule:</strong> Flexible hours across five sessions, each lasting approximately eight hours with breaks for offline activities.</li>
+                <li><strong>Requirements:</strong> Participants must be at least 18 years old, have a high school diploma or equivalent, and demonstrate oral and written proficiency in their working languages.</li>
+            </ul>
+            <p>To secure your spot, register and pay online. Partial payment plans are available, with an upfront payment of $300 and the balance due by the third day of training. For questions or to arrange accommodations for missed hours, please contact us at <a href="mailto:info@globalii.net">info@globalii.net</a>.</p>
+
+            <h2>Important Information</h2>
+            <ul>
+                <li>Training begins promptly at 9:00 a.m. (Central Standard Time) on the first day, with an orientation session to introduce the program.</li>
+                <li>Participants must attend at least 36 of the 40 hours to receive certification. Missed hours can be made up in future sessions.</li>
+                <li>Upon registration, you will receive your Zoom access link and further instructions.</li>
+            </ul>
+
+            <h2>Refund Policy</h2>
+            <ul>
+                <li>Full refunds are available for withdrawals made before the program start date.</li>
+                <li>Pro-rated refunds are offered based on attendance for withdrawals after the program begins.</li>
+                <li>Refund requests can be submitted via email to <a href="mailto:info@globalii.net">info@globalii.net</a>.</li>
+            </ul>
+
+            <h2>Join Us</h2>
+            <p>Take the next step in your interpreting career with Global Interpreting Innovations. Our workshops and trainings empower you with the tools and knowledge to succeed in a rapidly growing field. Register today and become part of a program that’s setting the standard for interpreter education!</p>
         </div>
     </main>
 
