--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
 <body>
     <header>
         <div class="nav-header">
-            <!-- Hamburger Menu Button -->
-            <button class="hamburger" id="hamburger-btn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <!-- Logo -->
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="images/Giilogo9.png" alt="Logo">
+                    <img src="images/Giilogosvg.svg" alt="Logo">
                 </a>
-            </div>           
+            </div>
         </div>
 
+        <!-- Menu Button -->
+        <button class="menu-btn" id="menu-btn" aria-label="Menu">Menu</button>
+                
         <!-- Overlay Navigation Menu -->
         <nav id="overlay-menu" class="hidden">
+            <button class="close-btn" aria-label="Close">Close</button>
+
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -38,36 +37,19 @@
         </nav>
     </header>
 
-    <main class="homepage">
-        <div class="homepage-container">
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <div class="hero-content">
             <h1>Welcome to Global Interpreting Innovations</h1>
-            <p>At Global Interpreting Innovations (GII), we believe that effective communication is the key to building bridges and empowering communities. As a women-owned business based in Minnesota, we are proud to bring exceptional training and professional development opportunities to interpreters nationwide and beyond.</p>
-
-            <h2>Transforming Lives Through Language</h2>
-            <p>Interpreters play a critical role in connecting individuals across cultural and linguistic divides. At GII, we are committed to equipping interpreters with the skills, knowledge, and resources they need to excel in their careers. Our flagship program, <strong>The Community Interpreter® International</strong>, is the most trusted and comprehensive 40-hour certificate training program for interpreters. This program is designed to:</p>
-            <ul>
-                <li>Prepare interpreters for work in medical, educational, and social service settings.</li>
-                <li>Provide a solid foundation in interpreting ethics, skills, and protocols.</li>
-                <li>Empower participants with the tools needed to navigate real-world challenges.</li>
-            </ul>
-
-            <h2>Why Choose GII?</h2>
-            <ul>
-                <li><strong>Women-Owned and Operated:</strong> As a proud women-owned business, we are dedicated to fostering inclusivity and empowering voices across communities.</li>
-                <li><strong>Minnesota Roots, Global Reach:</strong> While we are based in Minnesota, our programs serve interpreters across the nation and internationally.</li>
-                <li><strong>Expert-Led Training:</strong> Our certified trainers bring extensive experience and real-world knowledge to every session.</li>
-                <li><strong>Interactive and Engaging Learning:</strong> Hands-on activities, role plays, and practical exercises make our training effective and enjoyable.</li>
-            </ul>
-
-            <h2>Setting the Standard in Interpreter Training</h2>
-            <p>When you choose Global Interpreting Innovations, you’re not just enrolling in a course—you’re joining a movement dedicated to advancing language access and communication equity. Our training programs are built on the principles of excellence, innovation, and accessibility, ensuring that every interpreter leaves prepared to make a meaningful impact.</p>
-
-            <h2>Join Us</h2>
-            <p>Whether you are just beginning your interpreting journey or seeking advanced professional development, GII is here to support you every step of the way. Explore our training programs, connect with our team, and discover how we can help you achieve your goals.</p>
-
-            <p><strong>Global Interpreting Innovations — Empowering Interpreters, Bridging Communities.</strong></p>
+            <p>A women-owned business based in Minnesota, dedicated to empowering interpreters through trusted training and professional development.</p>
+            <p>Our flagship program, <strong>The Community Interpreter® International</strong>, is a comprehensive 40-hour certification course designed to prepare interpreters for success in medical, educational, and social service settings.</p>
+            <p>Explore our <a href="workshops.html">Workshops and Trainings</a> to learn more or visit <a href="contact.html">Contact Us</a> to connect with us today.</p>
+            <p>Together, we’re bridging linguistic and cultural divides to create a future of effective communication.</p>
         </div>
-    </main>
+        <div class="hero-image">
+            <img src="images/hero3.png" alt="Hero Image">
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2024 Global Interpreting Innovations. All rights reserved.</p>
