--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="workshops.html">Workshops and Trainings</a></li>
+                <li><a href="signup.html">Signup</a></li>
                 <li><a href="faq.html" class="active">FAQ</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -49,7 +50,7 @@
                 </p>
                 <ul>
                     <p><strong>Email:</strong> <a href="mailto:info@globalii.net">info@globalii.net</a></p>
-                    <p><strong>Phone:</strong> 020 7351 6543</p>
+                    <p><strong>Phone:</strong> 612-440-1760 </p>
                     <p><strong>Office Hours:</strong> Monday-Saturday: 10:00 AM - 6:00 PM</p>
 
                 </ul>
