--- a/faq.html
+++ b/faq.html
@@ -68,6 +68,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="workshops.html">Workshops and Trainings</a></li>
+                <li><a href="signup.html">Signup</a></li>
                 <li><a href="faq.html" class="active">FAQ</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -195,7 +196,7 @@
             <div class="faq-item">
                 <div class="faq-question">12. How much does your course cost?</div>
                 <div class="faq-answer">
-                    The course costs $500. Payment plans are available to make it accessible for everyone.
+                    The course costs $400.
                 </div>
             </div>
             
