--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="workshops.html">Workshops and Trainings</a></li>
+                <li><a href="signup.html">Signup</a></li>
                 <li><a href="faq.html" class="active">FAQ</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
