--- a/payment-redirect.html
+++ b/payment-redirect.html
@@ -2,15 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Payment Gateway</title>
-    <script>
-        window.open('https://buy.stripe.com/cNi6oG2Pl1Iv5Jsfvy3Ru00', '_blank');
-        window.location.href = 'signup.html?status=payment_started';
-    </script>
+    <title>Payment Redirect</title>
+
+    <meta http-equiv="refresh" content="0; url=https://buy.stripe.com/cNi6oG2Pl1Iv5Jsfvy3Ru00">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        /* Minimal styling to show the user what is happening */
+        body { font-family: sans-serif; text-align: center; padding-top: 50px; }
+        .spinner { border: 4px solid #f3f3f3; border-top: 4px solid #0a2540; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin: 20px auto; }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    </style>
 </head>
 <body>
-    <p>Please check your browser for the secure payment tab that has opened automatically.</p>
-    <p>If the tab did not open, click here: <a href="https://buy.stripe.com/cNi6oG2Pl1Iv5Jsfvy3Ru00" target="_blank">Open Stripe Payment</a></p>
-    <p>You can now close this window and return to the main site.</p>
+    <div class="spinner"></div>
+    <h2>Redirecting to Secure Payment...</h2>
+    <p>If you are not redirected automatically within 5 seconds, please click the link below.</p>
+    <p style="margin-top: 20px;">
+        <a href="https://buy.stripe.com/cNi6oG2Pl1Iv5Jsfvy3Ru00" style="color: #00b4d8; font-weight: bold;">
+            Click Here to Complete Payment
+        </a>
+    </p>
 </body>
 </html>
